--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ instance/*
 !instance/.gitignore
 .webassets-cache
 .env
-/exam_prep
+# /exam_prep
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
 __pycache__
